--- a/app/src/main/res/drawable/gradient_spinner.xml
+++ b/app/src/main/res/drawable/gradient_spinner.xml
@@ -3,7 +3,9 @@
 
     <item><layer-list>
         <item><shape>
-            <gradient android:angle="90" android:endColor="#B3BBCC" android:startColor="#E8EBEF" android:type="linear" />
+
+            <!--gradient android:angle="90" android:endColor="#B3BBCC" android:startColor="#E8EBEF" android:type="linear" /-->
+            <solid android:color="#ffffff"/>
 
             <stroke android:width="1dp" android:color="#000000" />
 
