--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="3dp"
             app:cardUseCompatPadding="true">
 
             <LinearLayout
@@ -43,14 +45,14 @@
                         android:checked="false" />
 
                     <TextView
+                        android:id="@+id/vol_up_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="If volume up button"
-                        android:id="@+id/vol_up_text"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="false"
                         android:layout_toLeftOf="@id/vol_up_switch"
                         android:layout_toStartOf="@id/vol_up_switch"
-                        android:layout_alignParentStart="false"
-                        android:layout_alignParentLeft="true"
+                        android:text="If volume up button"
                         android:textSize="18sp" />
                 </RelativeLayout>
 
@@ -61,10 +63,10 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/vol_up_text1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
-                        android:id="@+id/vol_up_text1"
                         android:text="is pressed for" />
 
                     <Spinner
@@ -86,86 +88,99 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="5dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingBottom="8dp">
 
                     <com.rey.material.widget.Switch
                         android:id="@+id/voice_code_switch"
                         style="@style/Material.Widget.Switch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:checked="false"
-                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true" />
+                        android:layout_alignParentTop="true"
+                        android:checked="false" />
 
                     <TextView
+                        android:id="@+id/voice_code_switch_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/voice_code_switch_text"
-                        android:text="If following voice code is spoken"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="false"
                         android:layout_toLeftOf="@id/voice_code_switch"
                         android:layout_toStartOf="@id/voice_code_switch"
-                        android:layout_alignParentStart="false"
-                        android:layout_alignParentLeft="true"
+                        android:text="If following voice code is spoken"
                         android:textSize="18sp" />
 
                 </RelativeLayout>
 
-                <LinearLayout
+
+
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <Spinner
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/gradient_spinner"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="2dp"
-                        android:id="@+id/voice_code1"
-                        android:entries="@array/digits"/>
-
-                    <Spinner
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/gradient_spinner"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="2dp"
-                        android:id="@+id/voice_code2"
-                        android:entries="@array/digits"/>
-                    <Spinner
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/gradient_spinner"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="2dp"
-                        android:id="@+id/voice_code3"
-                        android:entries="@array/digits"/>
-                    <Spinner
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/gradient_spinner"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="2dp"
-                        android:id="@+id/voice_code4"
-                        android:entries="@array/digits"/>
-
                     <ImageButton
-                        android:contentDescription="speaker"
+                        android:id="@+id/speak_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_speaker"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginStart="10dp"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:id="@+id/speak_btn"
-                        android:onClick="speakCode"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
                         android:layout_gravity="center_vertical"
-                        />
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:contentDescription="speaker"
+                        android:onClick="speakCode"
+                        android:src="@drawable/ic_speaker" />
 
 
-                </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@id/speak_btn"
+                        android:layout_toStartOf="@id/speak_btn"
+                        android:orientation="horizontal">
 
+                        <Spinner
+                            android:id="@+id/voice_code1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="3dp"
+                            android:background="@drawable/gradient_spinner"
+                            android:entries="@array/digits" />
+
+                        <Spinner
+                            android:id="@+id/voice_code2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="3dp"
+                            android:background="@drawable/gradient_spinner"
+                            android:entries="@array/digits" />
+
+                        <Spinner
+                            android:id="@+id/voice_code3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="3dp"
+                            android:background="@drawable/gradient_spinner"
+                            android:entries="@array/digits" />
+
+                        <Spinner
+                            android:id="@+id/voice_code4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="3dp"
+                            android:background="@drawable/gradient_spinner"
+                            android:entries="@array/digits" />
+
+                    </LinearLayout>
+
+                </RelativeLayout>
 
 
             </LinearLayout>
@@ -177,6 +192,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="3dp"
             app:cardUseCompatPadding="true">
 
             <LinearLayout
@@ -209,16 +226,23 @@
                         android:checked="false" />
 
                     <TextView
+                        android:id="@+id/send_message_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/send_message_text"
-                        android:text="Send panic text message\nto the following contacts"
-                        android:layout_alignParentTop="true"
                         android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true" />
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:text="Send panic text message\nto the following contacts" />
 
                 </RelativeLayout>
 
+                <android.support.v7.widget.AppCompatButton
+                    style="?attr/buttonBarButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="addContactForTxtMsg"
+                    android:textSize="12sp"
+                    android:text="ADD CONTACT"/>
 
                 <co.lujun.androidtagview.TagContainerLayout
                     android:id="@+id/tag_container_add_contact_for_text_msg"
@@ -226,14 +250,12 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="0dp"
                     android:padding="10dp"
-                    app:container_border_radius="2dp"
                     app:container_enable_drag="false"
                     app:horizontal_interval="10dp"
                     app:tag_clickable="true"
-                    app:tag_corner_radius="2dp"
+                    app:tag_enable_cross="true"
                     app:tag_max_length="50"
                     app:tag_theme="pure_teal"
-
                     app:vertical_interval="10dp" />
 
 
@@ -261,6 +283,7 @@
                         android:checked="false" />
 
                     <TextView
+                        android:id="@+id/call_switch_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
@@ -268,11 +291,17 @@
                         android:layout_centerVertical="true"
                         android:layout_toLeftOf="@id/call_switch"
                         android:layout_toStartOf="@id/call_switch"
-                        android:id="@+id/call_switch_text"
                         android:text="Make a call\nto the following contacts" />
 
                 </RelativeLayout>
 
+                <android.support.v7.widget.AppCompatButton
+                    style="?attr/buttonBarButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="addContactForCall"
+                    android:textSize="12sp"
+                    android:text="ADD CONTACT"/>
 
                 <co.lujun.androidtagview.TagContainerLayout
                     android:id="@+id/tag_container_add_contact_for_call"
@@ -280,11 +309,10 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="0dp"
                     android:padding="10dp"
-                    app:container_border_radius="2dp"
                     app:container_enable_drag="false"
                     app:horizontal_interval="10dp"
                     app:tag_clickable="true"
-                    app:tag_corner_radius="2dp"
+                    app:tag_enable_cross="true"
                     app:tag_max_length="50"
                     app:tag_theme="pure_teal"
                     app:vertical_interval="10dp" />
@@ -297,6 +325,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="3dp"
             app:cardUseCompatPadding="true">
 
             <LinearLayout
@@ -321,14 +351,14 @@
                         android:checked="false" />
 
                     <TextView
+                        android:id="@+id/vol_down_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="If volume down button"
-                        android:id="@+id/vol_down_text"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="false"
                         android:layout_toLeftOf="@id/vol_down_switch"
                         android:layout_toStartOf="@id/vol_down_switch"
-                        android:layout_alignParentStart="false"
-                        android:layout_alignParentLeft="true"
+                        android:text="If volume down button"
                         android:textSize="18sp" />
                 </RelativeLayout>
 
@@ -339,10 +369,10 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/vol_down_text1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
-                        android:id="@+id/vol_down_text1"
                         android:text="is pressed for" />
 
                     <Spinner
@@ -361,6 +391,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="3dp"
             app:cardUseCompatPadding="true">
 
             <LinearLayout
@@ -390,12 +422,12 @@
                         android:checked="false" />
 
                     <TextView
+                        android:id="@+id/backcam_switch_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
-                        android:id="@+id/backcam_switch_text"
                         android:layout_toLeftOf="@id/backcam_switch"
                         android:layout_toStartOf="@id/backcam_switch"
                         android:text="Take photo from back camera" />
@@ -425,12 +457,12 @@
                         android:checked="false" />
 
                     <TextView
+                        android:id="@+id/frontcam_switch_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
-                        android:id="@+id/frontcam_switch_text"
                         android:layout_toLeftOf="@id/frontcam_switch"
                         android:layout_toStartOf="@id/frontcam_switch"
                         android:text="Take photo from front camera" />
@@ -460,11 +492,11 @@
                         android:checked="false" />
 
                     <TextView
+                        android:id="@+id/video_switch_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
-                        android:id="@+id/video_switch_text"
                         android:layout_centerVertical="true"
                         android:layout_toLeftOf="@id/video_switch"
                         android:layout_toStartOf="@id/video_switch"
