--- a/app/src/main/res/drawable/gradient_spinner.xml
+++ b/app/src/main/res/drawable/gradient_spinner.xml
@@ -5,7 +5,7 @@
         <layer-list>
             <item>
                 <shape>
-                    <solid android:color="#ffffff"/>
+                    <solid android:color="#f5f5f5"/>
                     <stroke android:width="2dp" android:color="#aaaaaa"/>
                     <corners android:radius="6dp" />
                     <padding android:bottom="3dp" android:left="3dp" android:right="3dp" android:top="3dp" />
