--- a/app/src/main/res/menu/grid_menu.xml
+++ b/app/src/main/res/menu/grid_menu.xml
@@ -4,9 +4,16 @@
 
 
         <item
+            android:id="@+id/select_all"
+            android:icon="@drawable/ic_select_all"
+            app:showAsAction="ifRoom|withText"
+            android:title="SELECT ALL"/>
+
+        <item
             android:id="@+id/delete"
             android:icon="@drawable/ic_delete"
             app:showAsAction="ifRoom|withText"
             android:title="DELETE"/>
+
 
 </menu>
