--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -281,28 +281,28 @@
                     android:layout_marginBottom="10dp">
 
                     <com.rey.material.widget.Switch
-                        android:id="@+id/vibrate"
+                        android:id="@+id/shutter_sound"
                         style="@style/Material.Widget.Switch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:checked="true" />
+                        android:checked="false" />
 
                     <TextView
-                        android:id="@+id/vibrate_text"
+                        android:id="@+id/shutter_sound_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Vibration Feedback"
+                        android:text="Camera Shutter Sound"
                         android:textSize="18sp" />
                 </RelativeLayout>
 
 
                 <TextView
-                    android:id="@+id/vibrate_text1"
+                    android:id="@+id/shutter_sound_text1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Vibrate when panic point is reached either by volume button or voice code" />
+                    android:text="Shutter sound while taking picture or starting/stopping video recording" />
 
 
             </LinearLayout>
