--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -287,7 +287,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:checked="false" />
+                        android:checked="true" />
 
                     <TextView
                         android:id="@+id/shutter_sound_text"
