--- a/app/src/main/res/layout/cell_layout.xml
+++ b/app/src/main/res/layout/cell_layout.xml
@@ -12,4 +12,12 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
+    <com.bikrampandit.cliquick.SquareImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="center"
+        android:id="@+id/overlay"
+        android:visibility="gone"
+        android:src="@drawable/ic_overlay"/>
+
 </FrameLayout>
