--- a/app/src/main/res/layout/choose_number_dialog.xml
+++ b/app/src/main/res/layout/choose_number_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp">
 
@@ -14,12 +15,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="Contact name: "/>
+            android:text="Contact name: " />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/contact_name"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
     </LinearLayout>
 
 
