--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_gallery"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bikrampandit.cliquick.Gallery">
+    tools:context="com.bikrampandit.cliquick.GalleryGrid">
 
     <GridView
         android:layout_width="match_parent"
